[gd_scene load_steps=2 format=3 uid="uid://du7m06iryf8y2"]

[ext_resource type="Script" path="res://Scripts/store_slot.gd" id="1_ot5id"]

[node name="StoreSlot" type="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ot5id")

[node name="BlockPreview" type="SubViewportContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_vertical = 3
stretch_shrink = 3

[node name="PreviewViewport" type="SubViewport" parent="BlockPreview"]
disable_3d = true
handle_input_locally = false
size = Vector2i(150, 150)
render_target_update_mode = 4

[node name="BlockPreviewRoot" type="Node2D" parent="BlockPreview/PreviewViewport"]

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "Block Name"
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 2
text = "price"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="."]
layout_mode = 2
text = "buy"
